Fix 1st image not showing 1.2

--- a/css/styles.css
+++ b/css/styles.css
@@ -323,7 +323,7 @@ p {
 }
 
 .hero--center {
-  background-image: url("img/charliesosawallpaper.jpg");
+  background-image: url("charliesosawallpaper.jpg");
   text-align: center;
   width: 100%;
 }
